# embedded-storage-sim

./: Cargo.toml  LICENSE  README.md
src/: blocking.rs  gui.rs  lib.rs  main.rs  transaction.rs
src/workloads/: mod.rs
src/workloads/sequential_storage/: map.rs  queue.rs
