[package]
name = "embedded-storage-sim"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-storage = "0.3.1"
embedded-storage-async = "0.4.1"
fugit = "0.3.9"
rand = "0.9.2"

sequential-storage = { git = "https://github.com/tweedegolf/sequential-storage.git", branch = "master", optional = true }
eframe = { version = "0.33.3", optional = true, features = ["wgpu"] }
futures = { version = "0.3.31", optional = true, features = ["std"] }
anyhow = { version = "1.0.100", optional = true }
egui_plot = "0.34.0"
egui_tiles = "0.14.0"
egui_alignments = { git = "https://github.com/a-littlebit/egui_alignments.git", branch = "master" }

[features]
default = ["sequential-storage", "gui"]
sequential-storage = ["dep:sequential-storage"]
gui = ["dep:eframe", "dep:futures", "dep:anyhow", "sequential-storage"]
